Sema: Fix long-standing soundness hole in rethrows checking

A rethrows function would still be considered rethrows if one of
its argument functions unconditionally throws. This meant that we
would accept the following, even though it was invalid:

enum MyError : Error {
  case bad
}
func rethrowsViaClosure(_ fn: () throws -> ()) rethrows {
  try fn()
}
func invalidRethrows(_ fn: () throws -> ()) rethrows {
  try rethrowsViaClosure { throw MyError.bad }
}

invalidRethrows()

The problem was simple. When visiting a function argument in
rethrows analysis, we would always just drop the result of
the classification walk on the floor, which meant that we
returned ThrowingKind::RethrowingOnly instead of possibly
returning ThrowingKind::Throws.

Fixes https://bugs.swift.org/browse/SR-680 / rdar://problem/27868617.